--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -1,10 +1,13 @@
+.lb-loader,.lightbox{text-align:center;line-height:0}.lb-dataContainer:after,.lb-outerContainer:after{content:"";clear:both}body.lb-disable-scrolling{overflow:hidden}.lightboxOverlay{position:absolute;top:0;left:0;z-index:9999;background-color:#000;filter:alpha(Opacity=80);opacity:.8;display:none}.lightbox{position:absolute;left:0;width:100%;z-index:10000;font-weight:400}.lightbox .lb-image{display:block;height:auto;max-width:inherit;max-height:none;border-radius:3px;border:4px solid #fff}.lightbox a img{border:none}.lb-outerContainer{position:relative;width:250px;height:250px;margin:0 auto;border-radius:4px;background-color:#fff}.lb-loader,.lb-nav{position:absolute;left:0}.lb-outerContainer:after{display:table}.lb-loader{top:43%;height:25%;width:100%}.lb-cancel{display:block;width:32px;height:32px;margin:0 auto;background:url(../images/loading.gif) no-repeat}.lb-nav{top:0;height:100%;width:100%;z-index:10}.lb-container>.nav{left:0}.lb-nav a{outline:0;background-image:url(data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==)}.lb-next,.lb-prev{height:100%;cursor:pointer;display:block}.lb-nav a.lb-prev{width:34%;left:0;float:left;background:url(../images/prev.png) left 48% no-repeat;filter:alpha(Opacity=0);opacity:0;-webkit-transition:opacity .6s;-moz-transition:opacity .6s;-o-transition:opacity .6s;transition:opacity .6s}.lb-nav a.lb-prev:hover{filter:alpha(Opacity=100);opacity:1}.lb-nav a.lb-next{width:64%;right:0;float:right;background:url(../images/next.png) right 48% no-repeat;filter:alpha(Opacity=0);opacity:0;-webkit-transition:opacity .6s;-moz-transition:opacity .6s;-o-transition:opacity .6s;transition:opacity .6s}.lb-nav a.lb-next:hover{filter:alpha(Opacity=100);opacity:1}.lb-dataContainer{margin:0 auto;padding-top:5px;width:100%;border-bottom-left-radius:4px;border-bottom-right-radius:4px}.lb-dataContainer:after{display:table}.lb-data{padding:0 4px;color:#ccc}.lb-data .lb-details{width:85%;float:left;text-align:left;line-height:1.1em}.lb-data .lb-caption{font-size:13px;font-weight:700;line-height:1em}.lb-data .lb-caption a{color:#4ae}.lb-data .lb-number{display:block;clear:left;padding-bottom:1em;font-size:12px;color:#999}.lb-data .lb-close{display:block;float:right;width:30px;height:30px;background:url(../images/close.png) top right no-repeat;text-align:right;outline:0;filter:alpha(Opacity=70);opacity:.7;-webkit-transition:opacity .2s;-moz-transition:opacity .2s;-o-transition:opacity .2s;transition:opacity .2s}.lb-data .lb-close:hover{cursor:pointer;filter:alpha(Opacity=100);opacity:1}
+
+
+
 body {
   background-color: black;
 }
 
 h1{
   letter-spacing: 3px;
-  font-weight: 900px;
   color: black;
 }
 
@@ -20,15 +23,54 @@ h3{
 
 }
 
+h4{
+  letter-spacing: 10px;
+  color: white;
+  font-family: "hammersmith one", sans-serif;
+  font-size: 72px;
+}
+
+h5{
+  letter-spacing: 5px;
+  color: white;
+  font-family: "Khula", sans-serif;
+  font-size:18px;
+}
+
+h6{
+  letter-spacing: 5px;
+  color: red;
+  font-family: "Khula", sans-serif;
+  font-size:18px;
+}
+
 p{
   color: white;
   font-family: "Khula" , sans-serif;
   letter-spacing: 2px;
 }
+
+button{
+  background-color: black;
+  border: none;
+  color: white;
+  font-family: "Khula" , sans-serif;
+  font-size: 24px;
+  letter-spacing: 5px;
+  font-weight: 500;
+}
+
+button:hover{
+  color: #669966;
+}
+
+button:active{
+  color: #ff3333;
+}
 /*HOME PAGE*/
 
 #myVideo {
-  position: absolute;
+  position: fixed;
   z-index : -1;
   right: 0;
   bottom: 0;
@@ -36,31 +78,50 @@ p{
   min-height: 100%;
 }
 
-/* Style the header */
+.header-text{
+  position: fixed;
+  z-index: 5;
+  font-family: "Khula" , sans-serif;
+  font-size: 24px;
+  margin-left: 720px;
+  margin-top: 5px;
+  }
+
+.social{
+  position: fixed;
+  z-index: 5;
+  margin-top: 5px;
+}
+
+#twitter{
+  padding-right: 5px;
+  padding-left: 5px;
+}
+#facebook{
+  padding-right: 5px;
+  padding-left: 5px;
+}
+#instagram{
+  padding-right: 5px;
+  padding-left: 5px;
+}
+
 .header {
   position: fixed;
   z-index: 3;
   width: 100%;
-  padding: 20px;
+  padding: 30px;
   margin-top: -8px;
   margin-left: -8px;
   background: #ff3333;
-  color: black;
-  text-align: center;
-  font-family: "Khula", sans-serif;
-  font-size: 22px;
-  font-weight:900;
-  letter-spacing: 3px;
 }
 
 .nav{
   position: fixed;
-  z-index: 2;
-  color: white;
+  z-index: 4;
   font-family: 'Khula', sans-serif;
-  font-size: 100px;
   font-weight: 900;
-  padding-top: 0px;
+  padding-top: 90px;
   margin-top: -40px;
 }
 
@@ -68,7 +129,7 @@ p{
   float: left;
   display: block;
   color: white;
-  text-aligh: center;
+  text-align: center;
   padding: 0px 79px;
   text-decoration: none;
   font-size: 20px
@@ -76,24 +137,24 @@ p{
 
 .nav a:hover{
   color: #669966;
+  text-shadow: 2px 2px 4px black;
 }
 
 #logo{
   z-index: 2;
-  position: absolute;
-  top: 50px;
-  right: 30px;
-  bottom: 50px;
-  left: 230px;
+  position: fixed;
+  text-align: center;
+  width: 100%;
+  height: auto;
+  display: block;
+  margin-top:-100px;
 }
 
 
 /*ABOUT*/
 #about-pic {
-  width: 60%;
-  height: auto;
-  margin-top: 66px;
-  margin-left: -50px;
+  z-index: 1;
+  width: 100%;
 }
 
 ul{
@@ -104,87 +165,230 @@ ul{
 }
 
 #aboutlogo{
-  z-index: 1;
-  position: absolute;
-  top: 153px;
-  right: 30px;
-  bottom: 20px;
-  left: 490px;
+  z-index: 2;
+  position: relative;
+  text-align: left;
+  margin-top: -700px;
+  margin-left:-490px;
 }
 
 p{
-  margin-left: 120px;
   margin-right: 120px;
 }
 
 #about-header{
   z-index: 2;
-  position: absolute;
+  position: relative;
   color: white;
   font-family: "Hammersmith One", sans-serif;
-  letter-spacing: 10px;
+  letter-spacing: 5px;
   font-size: 72px;
-  margin-left: 1310px;
-  margin-top: 150px;
+  text-align: center;
+  margin-top: -1350px;
+
 }
 
 #subhead{
   position: relative;
   font-size: 17px;
   font-weight: 900px;
-  margin-left: 120px;
+  margin-top: 700px;
+  margin-left: 20px;
+}
+#sub{
+  margin-left:20px;
+}
+#band{
+  margin-left:20px;
+}
+#associated-acts{
+  position: relative;
+  font-size: 17px;
+  margin-left: 420px;
+  margin-top:-200px;
+}
+#list{
+  margin-left:-20px;
+}
+#acts{
+  margin-left:-20px;
+}
+
+/*MEDIA*/
+.container {
+  overflow: hidden;
+}
+
+.merch_thumbnail{
+  z-index: 1;
+  width: 300px;
+  height: auto;
+  display: block;
+  padding: 7px;
+}
+.filterDiv {
+  float: left;
+  background-color:none;
+  color: #ffffff;
+  width: 310px;
+  line-height: 400px;
+  text-align: center;
+  margin: 2px;
+  display: none; /* Hidden by default */
+}
+.filterDiv:hover{
+  opacity: 0.5;
+  transition: .5s ease;
 }
 
 
-/*MEDIA*/
+.so{
+position: absolute;
+z-index:4;
+top: 790px;
+left: 100px;
+opacity:0;
+}
+.so:hover{
+position:absolute;
+z-index: 4;
+top:790px;
+left:100px;
+opacity:1;
+}
+
+
+/* The "show" class is added to the filtered elements */
+.show {
+  display: block;
+}
+
+/* Style the buttons */
+.btn {
+  border: none;
+  outline: none;
+  padding: 12px 16px;
+  background-color: black;
+  cursor: pointer;
+  font-size:18px;
+}
+
+/* Add a light grey background on mouse-over */
+.btn:hover {
+  color: #669966;
+  text-shadow: 2px 2px 4px grey;
+}
+
+/* Add a dark background to the active button */
+.btn.active {
+  color: red;
+}
+.media-hero{
+  z-index: 1;
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.media-logo{
+  position: relative;
+  z-index: 2;
+  margin-top: -710px;
+  margin-left: -470px;
+}
+
+.media-header{
+  position: relative;
+  z-index: 2;
+  text-align: right;
+  margin-top:-1400px;
+  margin-right: 250px;
+}
+
+.thumbnail{
+  position: relative;
+  text-align: center;
+  margin-top: 740px;
+  padding: 20px;
+
+}
+
+#thumbnail-spacing{
+  padding: 20px;
+}
+
+#row1{
+  margin-bottom: 40px;
+}
+#row2{
+  margin-bottom: 40px;
+}
+
+.youtube{
+  text-align: center;
+}
+
+#youtube-row-1{
+  margin-bottom: 100px;
+}
 /*MERCH*/
 #merchhead{
   width:100%;
 }
 
-#merch{
-  position: absolute;
-  top: 710px;
-  left: 730px;
-  z-index: 3;
+#merchtitle{
+  position: relative;
+  text-align: center;
+  z-index: 2;
   color: white;
   font-family: "Hammersmith One", sans-serif;
   font-size: 72px;
   letter-spacing: 10px;
+  margin-top: -90px;
 }
 
-#merchlogo{
-  position: absolute;
-  text-align:left;
-}
-
-.justify{
-  position: absolute;
-  z-index: 2;
-  font-size:48px;
-  font-family: "Hammersmith One" , sans-serif;
+#myBtnContainer{
   color: white;
-  text-align:left;
-  margin-left: 10px;
-}
-
-#justify1{
-  position: absolute;
-  top: 150px;
-  letter-spacing: 8px;
-}
-#justify2{
-  position: absolute;
-  top: 200px;
-  letter-spacing: 5px;
-}
-#justify3{
-  position: absolute;
-  top: 250px;
-  letter-spacing: 5px;
 }
 
 /*DISCOGRAPHY*/
+* {
+  box-sizing: border-box;
+}
+
+/* Create two equal columns that floats next to each other */
+.column {
+  float:left;
+  width: 50%;
+  padding: 10px;
+  height: 320px;
+  margin-top: 280px;
+  margin-left: 380px;
+  margin-right: -400px;
+  margin-bottom: -200px;
+}
+.left{
+  width: 25%;
+}
+.right{
+  width: 50%;
+  height: 600px;
+  margin-right: -200px;
+}
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100;
+  }
+}
+
 
 /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
 .flip-card {
@@ -228,24 +432,15 @@ p{
   transform: rotateY(180deg);
 }
 
-#album1{
+
+#a1-text{
+  position:absolute;
+  z-index: 2;
   position: relative;
-  margin-left: 120px;
-  margin-top: 200px;
+  line-height: 0.3px;
+  color: white;
+  text-align: right;
 }
-
-#album2{
-  position: absolute;
-  margin-left: 120px;
-  margin-top: 50px;
-}
-
-#album3{
-  position: relative;
-  margin-left: 120px;
-  margin-top: 400px;
-}
-
 #discography{
   position: relative;
   text-align: center;
@@ -255,4 +450,174 @@ p{
   letter-spacing: 5px;
   font-size: 72px;
 }
+#skip{
+  font-family: "Khula", sans-serif;
+  color: white;
+  line-height: 2.5;
+  letter-spacing: 3px;
+}
+#skiptracing{
+  margin-top: -5px;
+}
+#time{
+  font-family: "Khula", sans-serif;
+  color: white;
+  line-height: 2.5;
+  letter-spacing: 3px;
+}
+
+
+
+
+
+
+
+
+
 /*TOUR DATES*/
+.dates-header{
+  position: relative;
+  text-align: center;
+  top:170px;
+  font-family: "hammersmith one", sans-serif;
+  color: white;
+  letter-spacing: 5px;
+  font-size: 72px;
+}
+
+.past{
+  position: relative;
+  color: white;
+  font-family: "khula", sans-serif;
+  color: white;
+  letter-spacing: 5px;
+  font-size: 24px;
+  font-weight: 600px;
+  margin-top: -39px;
+  margin-left: 120px;
+  text-align: center;
+}
+.future{
+  position: relative;
+  color: white;
+  font-family: "khula", sans-serif;
+  color: white;
+  letter-spacing: 5px;
+  font-size: 24px;
+  font-weight: 600px;
+  margin-top: 200px;
+  margin-right: 110px;
+  text-align: center;
+}
+
+#check{
+  text-align: center;
+  letter-spacing: 3px;
+  font-size: 20px;
+  margin-top: 30px;
+}
+
+.f-p{
+  color:white;
+  font-size: 24px;
+  font-family:"Khula", sans-serif;
+  letter-spacing: 5px;
+  margin-top: -38px;
+  margin-left:440px;
+}
+
+.dates-body{
+  position: relative;
+  text-align: center;
+  margin-top: 10px;
+  font-family: "khula", sans-serif;
+  color: white;
+  letter-spacing: 3px;
+  font-size: 18px;
+}
+
+#dates-body-chunk{
+  position: relative;
+  text-align: center;
+}
+
+#future-body-chunk{
+  position: relative;
+  text-align: center;
+  font-size: 20px;
+  letter-spacing: 3px;
+  margin-top:-10px;
+  color: white;
+  margin-left: 100px;
+}
+
+#past-logo{
+  position: relative;
+  text-align: center;
+  margin-top: -400px;
+}
+
+#redline{
+  position:relative;
+  background-color:#ff3333;
+  height: 5px;
+  width: 400px;
+  margin-top:-780px;
+  margin-left: 620px;
+}
+
+#redline2{
+  position:relative;
+  background-color:#ff3333;
+  height: 5px;
+  width: 400px;
+  margin-top:-780px;
+  margin-left: 510px;
+}
+#future-logo{
+  position:relative;
+  margin-top:-400px;
+  margin-right: 120px;
+}
+
+
+#tour-image{
+  z-index: 1;
+  text-align:center;
+  width:100%;
+  margin: auto;
+  display:block;
+  margin-top: 300px;
+}
+/* Style the tab */
+.tab {
+  overflow: hidden;
+  margin-top: 200px;
+  text-align: center;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+  background-color: inherit;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  color:#ff3333;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border-top: none;
+}
